--- a/www/content.css
+++ b/www/content.css
@@ -23,3 +23,12 @@ IMG.img_slide {
 
 /* Tables */
 tr { vertical-align:top }
+
+/* Code */
+div.code{
+    border: 1px solid LightSteelBlue ;
+    font-family: Courier New;
+    background-color: #E3E3E3;
+    padding: 7px;
+    margin: 7px;
+}
